[KIOSK-11] [KIOSK-68] add store activity * 이미지 캐싱을 위한 glide(3.7.0) 추가

--- a/app/src/main/res/layout/store_place_item.xml
+++ b/app/src/main/res/layout/store_place_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -7,7 +7,8 @@
     <android.support.v7.widget.CardView
         android:id="@+id/store_card_view"
         android:layout_width="match_parent"
-        android:layout_height="81.5dp">
+        android:layout_height="81.5dp"
+        android:layout_marginBottom="1dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,14 +20,12 @@
                 android:id="@+id/store_iv"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:background="@drawable/img_store_suggest"
                 android:layout_marginRight="@dimen/store_item_iv_right_margin"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_weight="3">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/store_text_name"
@@ -35,7 +34,7 @@
                     android:text="@string/txt_store_name"
                     android:textColor="@color/color_05"
                     android:textSize="15sp"
-                    android:layout_marginBottom="@dimen/store_item_text_name_bottom_margin"/>
+                    android:layout_marginBottom="@dimen/store_item_text_name_bottom_margin" />
 
                 <TextView
                     android:id="@+id/store_text_address"
@@ -47,22 +46,6 @@
                     android:maxLines="2"
                     android:lines="2"/>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <TextView
-                    android:id="@+id/store_text_yd"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center|center_horizontal"
-                    android:text="@string/txt_store_yd"
-                    android:textColor="@color/color_05"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
-</LinearLayout>
+</RelativeLayout>
