--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,8 +22,8 @@
     <color name="color_08">#ededed</color>
     <color name="color_09">#fd6246</color>
     <color name="color_10">#666666</color>
+    <color name="color_11">#f6f6f6</color>
 
-    <color name="color_11">#7d7d7d</color>
     <color name="color_12">#ebebeb</color>
     <color name="color_13">#565656</color>
     <color name="color_14">#7f7f7f</color>
