[KIOSK-11] [KIOSK-70] myinfo activity 구현

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,6 @@
     <dimen name="store_item_iv_right_margin">13dp</dimen>
     <dimen name="store_item_text_name_bottom_margin">4.5dp</dimen>
 
+    <!--myinfo_layout-->
+    <dimen name="myinfo_tv_left_margin">15dp</dimen>
 </resources>
