--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,8 +24,8 @@
     <color name="color_10">#666666</color>
     <color name="color_11">#f6f6f6</color>
     <color name="color_12">#e3e3e3</color>
+    <color name="color_13">#3e3e3e</color>
 
-    <color name="color_13">#565656</color>
     <color name="color_14">#7f7f7f</color>
     <color name="color_15">#5a5a5a</color>
     <color name="color_16">#eaeaea</color>
