[KIOSK-11] [KIOSK-72] add menu activity

--- a/app/src/main/res/layout/subcategory_item.xml
+++ b/app/src/main/res/layout/subcategory_item.xml
@@ -27,7 +27,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="right|center"
+                android:gravity="end|center"
                 android:paddingRight="@dimen/subcategory_item_iv_right_padding">
 
                 <ImageView
