--- a/app/src/main/res/drawable/radio_item.xml
+++ b/app/src/main/res/drawable/radio_item.xml
@@ -2,14 +2,22 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/btn_radio_01_sel"
-        android:state_checked="true"
-        android:state_pressed="true" />
-    <item
-        android:drawable="@drawable/btn_radio_01_sel"
-        android:state_pressed="true" />
+        android:state_selected="true" />
     <item
         android:drawable="@drawable/btn_radio_01_sel"
         android:state_checked="true" />
+    <item
+        android:drawable="@drawable/btn_radio_01_sel"
+        android:state_pressed="true" />
+    <item
+        android:drawable="@drawable/btn_radio_01_nor"
+        android:state_selected="false" />
+    <item
+        android:drawable="@drawable/btn_radio_01_nor"
+        android:state_checked="false" />
+    <item
+        android:drawable="@drawable/btn_radio_01_nor"
+        android:state_pressed="false" />
     <item
         android:drawable="@drawable/btn_radio_01_nor" />
 </selector>
