--- a/app/src/main/res/layout/activity_menu_option.xml
+++ b/app/src/main/res/layout/activity_menu_option.xml
@@ -55,5 +55,61 @@
 
         <include layout="@layout/content_menu_option" />
 
+        <!--fixed bottom btn-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true">
+
+            <RelativeLayout
+                android:layout_width="174dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/menu_option_btn_cart"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/btn_type1_click_event" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/menu_option_btn_cart"
+                    android:layout_alignStart="@id/menu_option_btn_cart"
+                    android:layout_alignEnd="@id/menu_option_btn_cart"
+                    android:layout_alignTop="@id/menu_option_btn_cart"
+                    android:text="@string/menu_option_tv_cart"
+                    android:textSize="17sp"
+                    android:textColor="@color/color_03"
+                    android:gravity="center|center_horizontal"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="174dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/menu_option_btn_payment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/btn_type2_click_event" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/menu_option_btn_payment"
+                    android:layout_alignStart="@id/menu_option_btn_payment"
+                    android:layout_alignEnd="@id/menu_option_btn_payment"
+                    android:layout_alignTop="@id/menu_option_btn_payment"
+                    android:text="@string/menu_option_tv_payment"
+                    android:textSize="17sp"
+                    android:textColor="@color/color_03"
+                    android:gravity="center|center_horizontal"/>
+            </RelativeLayout>
+        </LinearLayout>
+
     </RelativeLayout>
 </LinearLayout>
