--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,13 @@
     <dimen name="menu_option_ll_menu_info_top_padding">14dp</dimen>
     <dimen name="menu_option_ll_menu_info_bottom_padding">14dp</dimen>
 
+    <!--cart menu layout-->
+    <dimen name="cart_menu_tv_top_margin">13dp</dimen>
+    <dimen name="cart_menu_tv_bottom_margin">5dp</dimen>
+    <dimen name="cart_menu_ll_left_padding">15dp</dimen>
+    <dimen name="cart_menu_ll_right_padding">15dp</dimen>
+    <dimen name="cart_menu_card_item_ll_padding">15dp</dimen>
+    <dimen name="cart_menu_card_item_iv_right_margin">12dp</dimen>
+    <dimen name="cart_menu_card_item_tv_bottom_margin">2.5dp</dimen>
+
 </resources>
